Fix wonky overlap in contact section in firefox

--- a/styles/main-480.css
+++ b/styles/main-480.css
@@ -355,6 +355,7 @@
         display: flex;
         flex-direction: column-reverse;
         width: 100%;
+        margin-right: 0;
     }
     
     #contact-details {
