--- a/styles/main-992.css
+++ b/styles/main-992.css
@@ -337,7 +337,7 @@
 
     #contact-form {
         max-width: 27rem;
-        width: 110%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         padding-top: 0.6rem;
@@ -366,7 +366,7 @@
     #contact-thanks {
         display: block;
         width: 17em;
-        margin: auto 0 7rem 0;
+        margin: auto 0 7rem 2rem;
     }
     
     #contact-details {
